<resources>
    <string name="app_name">login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter">Вход</string>
    <string name="email">Email</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="password">Пароль</string>
    <string name="input_password">Введите пароль</string>
    <string name="no_account">Нет аккаунта? Регистрация</string>
    <string name="forgot_password">Забыл пароль</string>
</resources>