<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/dark"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/enterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="140dp"
        android:text="@string/enter"
        android:textColor="@color/whiteText"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:letterSpacing="0.015"
        android:text="@string/email"
        android:textColor="@color/whiteText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/enterTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterTextView" />

    <EditText
        android:id="@+id/putEmailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/example_gmail_com"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="@color/whiteText"
        android:textColorHint="@color/hintText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextView" />

    <TextView

        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:textColor="@color/whiteText"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/putEmailEditText" />

    <EditText
        android:id="@+id/putPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/input_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@color/whiteText"
        android:textColorHint="@color/hintText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEnter"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/green"
        android:text="@string/enter"
        android:textColor="@color/whiteText"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/putPasswordEditText" />

    <TextView
        android:layout_marginEnd="60dp"
        android:id="@+id/haveNoAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/no_account"
        android:textColor="@color/whiteText"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEnter" />

    <TextView
        android:layout_marginStart="3dp"
        android:id="@+id/registrationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Регистрация"
        android:textColor="@color/clickable_text_color"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/haveNoAccountTextView"
        app:layout_constraintTop_toBottomOf="@+id/btnEnter" />

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/forgot_password"
        android:textColor="@color/clickable_text_color"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/haveNoAccountTextView" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        app:dividerColor="@color/divider_color"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTextView" />

    <ImageButton
        android:id="@+id/btnVK"
        android:layout_width="156dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:background="@drawable/rounded_edit_text"
        android:backgroundTint="@color/btn_vk_color"
        android:foregroundGravity="center"
        android:padding="0dp"
        android:scaleType="center"
        android:src="@drawable/vector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <ImageButton
        android:id="@+id/btnOdnoklassniki"
        android:layout_width="156dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:adjustViewBounds="true"
        android:background="@drawable/rounded_edit_text"
        android:backgroundTint="@color/btn_odnoklassniki_color"
        android:foregroundGravity="center"
        android:padding="0dp"
        android:scaleType="center"
        android:src="@drawable/group_11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

</androidx.constraintlayout.widget.ConstraintLayout>